@@ -27,6 +27,7 @@ Changes that do not introduce incompatibilities:
 
 * Add a function sol.main.get_quest_version() (#1058) by Nate-Devv.
 * Add methods entity:get_layer() and entity:set_layer().
+* Add a method sprite:get_frame_src_xy() (#1093).
 * sprite:get_num_frames() can now optionally take an animation and direction.
 * sprite:get_frame_delay() can now optionally take an animation.
 * sprite:get_size() can now optionally take an animation and direction.
